--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>headerd</header>
-    <main></main>
+    <main>Main rep</main>
     <footer>Hello world!</footer>
 </body>
 </html>
